优化邮件功能

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -15,6 +15,7 @@
                     <div  class="a"><a href="#memorycheck" class="lefttitle">5、内存检测</a></div>
         <div  class="a"><a href="#diskcheck" class="lefttitle">6、磁盘检测</a></div>
         <div  class="a"><a href="#selinuxcheck" class="lefttitle">7、SELinux检测</a></div>
+        <div  class="a"><a href="#profilemax" class="lefttitle">8、进程file-max</a></div>
                     <div  class="aa" style="text-align: center" ><a href="./{2}" class="lefttitle">详细数据记录</a></div>
                     <div  class="aa" style="text-align: center" ><a href="./{3}" class="lefttitle">巡检报告</a></div>
         <div  class="aa" style="text-align: center" ><a href="#top" class="lefttitle">回到顶部</a></div>
