--- a/templates/frame.html
+++ b/templates/frame.html
@@ -8,14 +8,16 @@
             <body>
                 <div class="right_nav">
                     <div class="a" style="text-align: center;border: 0px solid black;font-weight: bold; background: #F77913"><a class="lefttitle" >导航栏</a></div>
-        <div class="a"><a href="#project_summary" class="lefttitle">1、项目概况</a></div>
-        <div  class="a" ><a href="#inspection_explain" class="lefttitle">2、巡检说明</a></div>
-        <div  class="a"><a href="#error_explain"  class="lefttitle">3、异常说明</a></div>
-        <div  class="a"><a href="#cpuloadcheck" class="lefttitle">4、CPU负载</a></div>
+                    <div class="a"><a href="#project_summary" class="lefttitle">1、项目概况</a></div>
+                    <div  class="a" ><a href="#inspection_explain" class="lefttitle">2、巡检说明</a></div>
+                    <div  class="a"><a href="#error_explain"  class="lefttitle">3、异常说明</a></div>
+                    <div  class="a"><a href="#cpuloadcheck" class="lefttitle">4、CPU负载</a></div>
                     <div  class="a"><a href="#memorycheck" class="lefttitle">5、内存检测</a></div>
-        <div  class="a"><a href="#diskcheck" class="lefttitle">6、磁盘检测</a></div>
-        <div  class="a"><a href="#selinuxcheck" class="lefttitle">7、SELinux检测</a></div>
-        <div  class="a"><a href="#profilemax" class="lefttitle">8、进程file-max</a></div>
+                    <div  class="a"><a href="#diskcheck" class="lefttitle">6、磁盘检测</a></div>
+                    <div  class="a"><a href="#selinuxcheck" class="lefttitle">7、SELinux检测</a></div>
+                    <div  class="a"><a href="#profilemax" class="lefttitle">8、进程file-max</a></div>
+                    <div  class="a"><a href="#crontab" class="lefttitle">9、定时任务记录</a></div>
+                    <div  class="a"><a href="#rclocal" class="lefttitle">10、rc.local记录</a></div>
                     <div  class="aa" style="text-align: center" ><a href="./{2}" class="lefttitle">详细数据记录</a></div>
                     <div  class="aa" style="text-align: center" ><a href="./{3}" class="lefttitle">巡检报告</a></div>
         <div  class="aa" style="text-align: center" ><a href="#top" class="lefttitle">回到顶部</a></div>
